# lite-bfx-spark

./: .env.example  .gitattributes  .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CLAUDE.md  DIRECTORY.md  Dockerfile  IMPLEMENTATION.md  ISSUES.md  LICENSE  PLAN.md  README.md  TESTING.md  datasource_v2_plan.md  datasource_v2_plan_tasks.md  docker-compose.yml  mkdocs.yml  pom.xml
.github/checkstyle/: checkstyle.xml
.github/workflows/: ci.yml  publish.yml  python-ci.yml  python-publish.yml
core/: pom.xml
core/src/main/java/com/litebfx/: HadoopSeekableStream.java  SerializableConfiguration.java
core/src/main/java/com/litebfx/bam/: BamDataSource.java  BamInputPartition.java  BamPartitionReader.java  BamPartitionReaderFactory.java  BamScan.java  BamScanBuilder.java  BamSchema.java  BamTable.java  CramDataSource.java
core/src/main/java/com/litebfx/bed/: BedDataSource.java  BedInputPartition.java  BedPartitionReader.java  BedPartitionReaderFactory.java  BedScan.java  BedScanBuilder.java  BedSchema.java  BedTable.java
core/src/main/java/com/litebfx/fasta/: FastaDataSource.java  FastaInputPartition.java  FastaPartitionReader.java  FastaPartitionReaderFactory.java  FastaScan.java  FastaScanBuilder.java  FastaSchema.java  FastaTable.java
core/src/main/java/com/litebfx/fastq/: FastqDataSource.java  FastqInputPartition.java  FastqPartitionReader.java  FastqPartitionReaderFactory.java  FastqScan.java  FastqScanBuilder.java  FastqSchema.java  FastqTable.java
core/src/main/java/com/litebfx/vcf/: VcfDataSource.java  VcfInputPartition.java  VcfPartitionReader.java  VcfPartitionReaderFactory.java  VcfScan.java  VcfScanBuilder.java  VcfSchema.java  VcfTable.java
core/src/main/java/com/sparkbam/: BamDataSource.java  BamInputPartition.java  BamPartitionReader.java  BamPartitionReaderFactory.java  BamScan.java  BamScanBuilder.java  BamSchema.java  BamTable.java  HadoopSeekableStream.java  SerializableConfiguration.java
core/src/main/java/io/github/peterdowdy/litebfx/: FileMetadata.java  HadoopSeekableStream.java  SerializableConfiguration.java
core/src/main/java/io/github/peterdowdy/litebfx/bam/: BamDataSource.java  BamInputPartition.java  BamPartitionReader.java  BamPartitionReaderFactory.java  BamScan.java  BamScanBuilder.java  BamSchema.java  BamTable.java  CramDataSource.java
core/src/main/java/io/github/peterdowdy/litebfx/bed/: BedDataSource.java  BedInputPartition.java  BedPartitionReader.java  BedPartitionReaderFactory.java  BedScan.java  BedScanBuilder.java  BedSchema.java  BedTable.java
core/src/main/java/io/github/peterdowdy/litebfx/fasta/: FastaDataSource.java  FastaInputPartition.java  FastaPartitionReader.java  FastaPartitionReaderFactory.java  FastaScan.java  FastaScanBuilder.java  FastaSchema.java  FastaTable.java
core/src/main/java/io/github/peterdowdy/litebfx/fastq/: FastqDataSource.java  FastqInputPartition.java  FastqPartitionReader.java  (+5 more)
core/src/test-azure/java/com/litebfx/bam/: BamAzureTest.java
core/src/test-azure/java/com/litebfx/fasta/: FastaAzureTest.java
core/src/test-azure/java/com/litebfx/vcf/: VcfAzureTest.java
core/src/test-gcs/java/com/litebfx/bam/: BamGcsTest.java
core/src/test-gcs/java/com/litebfx/fasta/: FastaGcsTest.java
core/src/test-gcs/java/com/litebfx/vcf/: VcfGcsTest.java
core/src/test-s3/java/com/litebfx/bam/: BaiRangeS3Test.java  CraiRangeS3Test.java
core/src/test-s3/java/com/litebfx/bed/: BedS3Test.java
core/src/test-s3/java/com/litebfx/fasta/: FaiRangeS3Test.java
core/src/test-s3/java/com/litebfx/vcf/: VcfS3Test.java
core/src/test/java/com/litebfx/bam/: BamDataSourceTest.java  BamPartitionReaderTest.java  BamScanBuilderTest.java  CramDataSourceTest.java  RangeBamTest.java  TestBamGenerator.java
core/src/test/java/com/litebfx/bed/: BedDataSourceTest.java  BedPartitionReaderTest.java  BedScanBuilderTest.java  BedTestGenerator.java
core/src/test/java/com/litebfx/fasta/: FastaDataSourceTest.java  FastaPartitionReaderTest.java  FastaScanBuilderTest.java
core/src/test/java/com/litebfx/fastq/: FastqDataSourceTest.java  FastqPartitionReaderTest.java  FastqTestGenerator.java
core/src/test/java/com/litebfx/vcf/: VcfDataSourceTest.java  VcfPartitionReaderTest.java  VcfScanBuilderTest.java  VcfTestGenerator.java
core/src/test/java/com/sparkbam/: BamDataSourceTest.java  BamPartitionReaderTest.java  RangeBamTest.java  TestBamGenerator.java
core/src/test/resources/: log4j2-test.xml
docker/: Dockerfile.databricks  Dockerfile.databricks-connect  Dockerfile.python  Dockerfile.python-databricks  Dockerfile.spark402  Dockerfile.spark411  samtools-build.sh
docs/: bam.md  bed.md  cloud-storage.md  fasta.md  fastq.md  index.md  partitioning.md  requirements.txt  scala-api.md  vcf.md
docs/proposals/: python-data-source.md
python/: .gitignore  README.md  TASKS.md  pyproject.toml
python/scripts/: mint_gcs_token.py
python/spikes/: README.md  bam_spike.py  big_spike.py  cram_probe.py  guesser_spike.py  span_spike.py
python/src/litebfx/: __init__.py  _base.py  _cloud.py  _cloudfs.py  arrow.py  bam.py  bed.py  bgzf.py  cram.py  fasta.py  fastq.py  io.py  regions.py  schemas.py  vcf.py
python/tests/: conftest.py  test_cloud_azure.py  test_cloud_databricks.py  test_cloud_databricks_vending.py  test_cloud_gcp_ambient.py  test_cloud_gcs.py  test_cloud_gcs_live.py  test_cloud_s3.py  test_cloudfs_cache.py  test_features.py  test_pure.py  test_read_parity.py  test_samtools_parity.py  test_schema_parity.py  test_unindexed_bam_split.py
scala/: pom.xml
scala/src/main/scala/com/litebfx/scala/: DataFrameOps.scala  DataFrameReaderOps.scala  GenomicRegion.scala  LiteBfxSpark.scala  package.scala
scala/src/test/scala/com/litebfx/scala/: DataFrameOpsTest.scala  DataFrameReaderOpsTest.scala  GenomicRegionTest.scala  LiteBfxSparkTest.scala
scripts/: generate-directory.sh  run-tests.sh
tests/: smoke_serverless.py  smoke_uc_credential_vending.py
tests/smoke/: pom.xml
tests/smoke/src/test/java/: FatJarReaderTest.java  SmokeTest.java
tests/smoke/src/test/resources/: range_noref.cram  range_noref.cram.crai  sample.vcf
(+47 files in other folders)
