[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lite-bfx-spark"
dynamic = ["version"]
description = "Pure-Python Spark 4 Data Source readers for genomics formats (BAM/SAM/CRAM, VCF/BCF, FASTA, FASTQ, BED)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Peter Dowdy" }]
keywords = ["spark", "pyspark", "genomics", "bioinformatics", "bam", "cram", "vcf", "fasta", "fastq", "bed", "pysam", "htslib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# pysam parses the files -- always needed, never provided by a Spark/Databricks runtime.
# pyarrow is required by Spark's Python Data Source machinery to transfer rows from the
# Python worker (needed even when read() yields tuples), but -- like pyspark itself -- it is
# *provided* by every environment this package actually runs in (any Spark cluster, and
# Databricks classic or serverless both bundle a runtime-pinned pyarrow tightly coupled to
# their own internals). Declaring it as a hard dependency risks pip upgrading/downgrading
# that pinned version out from under the environment -- a real, observed install failure on
# Databricks dedicated compute, not a hypothetical one -- so it lives in the `spark`/`test`
# extras only, exactly like pyspark. See python/README.md's "Installing on Databricks"
# section for the --no-deps recipe when even that still conflicts.
dependencies = ["pysam>=0.22"]

[project.optional-dependencies]
spark = ["pyspark>=4.0", "pyarrow>=4"]
# Mints htslib's required GCS_OAUTH_TOKEN from an ambient GOOGLE_APPLICATION_CREDENTIALS
# service-account key file -- see _cloud.py's module docstring. Not needed for S3 or Azure
# (ambient credentials work unmodified there).
gcp = ["google-auth>=2.20", "requests>=2.28"]
test = ["pytest>=7.0", "pyspark>=4.0", "pyarrow>=4", "boto3>=1.28", "google-auth>=2.20",
        "requests>=2.28"]

[project.urls]
Homepage = "https://github.com/PeterDowdy/lite-bfx-spark"
Documentation = "https://lite-bfx-spark.readthedocs.io/"
Repository = "https://github.com/PeterDowdy/lite-bfx-spark"

[tool.hatch.version]
path = "src/litebfx/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/litebfx"]

[tool.hatch.build.targets.sdist]
include = ["src/litebfx", "README.md"]

[tool.pytest.ini_options]
markers = [
    "spark: test needs a JVM-backed SparkSession (skipped where no compatible JDK is present)",
]
testpaths = ["tests"]
